<resources>
    <string name="app_name">FOOD</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="dashboard">Dashboard</string>
    <string name="details">Details</string>
    <string name="origin">Origin</string>
    <string name="main_ingredient">Main Ingredient</string>
    <string name="meal_type">Meal Type</string>
    <string name="description">Description</string>
    <string name="error_login_failed">Login failed. Please check your credentials.</string>
    <string name="error_network">Network error. Please check your connection.</string>
    <string name="loading">Loading...</string>
</resources>